[tool.poetry]
name = "aio_syringe"
version = "0.1.0"
description = "Just-in-time injections awaitable from asyncio coroutines"
authors = ["Chris Lee <chrisklee93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
setuptools = "^57.4.0"
asyncio = "^3.4.3"
pytest = {version = "^6.2.4", extras = ["test"]}
pytest-asyncio = {version = "^0.18.0", extras = ["test"]}

[tool.poetry.dev-dependencies]
pytest = {version = "^6.2.4", extras = ["test"]}
pytest-asyncio = {version = "^0.18.0", extras = ["test"]}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
